--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
     password: ls054736
     url: jdbc:mysql://101.201.102.235:3306/BCS?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 
+mybatis:
+  mapperLocations: classpath:/mapper/*.xml
+
