--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,11 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.5.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
