--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,18 @@ spring:
     password: xxxx
     url: jdbc:mysql://xxx.xxx.xxx.xxx:xxxx/xxxx?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 
+  redis:
+    host: 127.0.0.1
+    database: 0
+    password:
+    port: 6379
+    jedis:
+      pool:
+        max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1ms  # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 10  # 连接池中的最大空闲连接
+        min-idle: 5 # 连接池中的最小空闲连接
+
 mybatis:
   mapperLocations: classpath:/mapper/*.xml
 
