-修改异常拦截返回http状态码 -部分结构调整，类型调整 -用户模块提交 -新增参数校验

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,9 @@ mybatis:
 
 logging:
   config: classpath:log4j2.xml
+
+jwt:
+  # token有效时间/分钟
+  tokenExpireTime: 10
+  # refresh-token有效时间/分钟
+  refreshExpireTime: 1440
